--- a/desktop-portfolio/public/404.html
+++ b/desktop-portfolio/public/404.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Redirecting&hellip;</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Redirecting — Robert Hoffmann</title>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="description" content="Redirecting to Robert Hoffmann's portfolio." />
+    <link rel="canonical" href="https://i-technology.net/" />
     <script>
       // SPA redirect for GitHub Pages
       // Encodes the current path into a query string so index.html can restore it
