--- a/desktop-portfolio/index.html
+++ b/desktop-portfolio/index.html
@@ -83,10 +83,56 @@
     <!-- ── Fonts (self-hosted) ── -->
     <link rel="preload" href="./fonts/inter-latin-var.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./fonts/jetbrains-mono-latin-var.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./wallpaper-lqip.webp" as="image" type="image/webp" fetchpriority="high" />
 
-    <!-- ── Performance Hints ── -->
-    <link rel="preload" href="./wallpaper.webp" as="image" type="image/webp" />
-    <link rel="dns-prefetch" href="https://www.youtube.com" />
+    <script>
+      (function () {
+        try {
+          var raw = localStorage.getItem('desktop-portfolio-state');
+          if (!raw) return;
+          var data = JSON.parse(raw);
+          if (data && (data.theme === 'dark' || data.theme === 'light')) {
+            document.documentElement.setAttribute('data-theme', data.theme);
+          }
+        } catch (_) { /* noop */ }
+      })();
+    </script>
+    <style>
+      :root {
+        --boot-grad-start : #1a0a35;
+        --boot-grad-end   : #9964ac;
+        --boot-gradient   : linear-gradient(135deg, var(--boot-grad-start), var(--boot-grad-end));
+        background        : var(--boot-gradient);
+      }
+
+      html,
+      body {
+        min-height : 100%;
+        margin     : 0;
+        background : var(--boot-gradient);
+      }
+
+      #app {
+        min-height   : 100dvh;
+        background   : var(--boot-gradient);
+      }
+
+      #app [data-prerender-root] {
+        position    : absolute;
+        inline-size : 1px;
+        block-size  : 1px;
+        margin      : -1px;
+        padding     : 0;
+        overflow    : hidden;
+        clip-path   : inset(50%);
+        white-space : nowrap;
+        border      : 0;
+      }
+
+      html[data-app-mounted="true"] #app [data-prerender-root] {
+        display : none;
+      }
+    </style>
   </head>
   <body>
     <!-- SPA redirect decoder (pairs with 404.html for GitHub Pages) -->
@@ -110,7 +156,7 @@
           if (paramLang === 'fr' || paramLang === 'en') {
             lang = paramLang;
           } else {
-            var raw = localStorage.getItem('desktop-portfolio-session');
+            var raw = localStorage.getItem('desktop-portfolio-state');
             if (raw) {
               var data = JSON.parse(raw);
               if (data.locale === 'fr' || data.locale === 'en') {
