feat: streamline language detection and remove share link functionality

--- a/desktop-portfolio/index.html
+++ b/desktop-portfolio/index.html
@@ -150,27 +150,22 @@
     <script>
       (function () {
         try {
-          var lang = null;
-          var params = new URLSearchParams(window.location.search);
-          var paramLang = params.get('lang');
-          if (paramLang === 'fr' || paramLang === 'en') {
-            lang = paramLang;
-          } else {
-            var raw = localStorage.getItem('desktop-portfolio-state');
-            if (raw) {
-              var data = JSON.parse(raw);
-              if (data.locale === 'fr' || data.locale === 'en') {
-                lang = data.locale;
-              }
+          var lang = 'en';
+          var raw = localStorage.getItem('desktop-portfolio-state');
+          if (raw) {
+            var data = JSON.parse(raw);
+            if (data.locale === 'fr' || data.locale === 'en') {
+              lang = data.locale;
             }
           }
-          if (!lang) {
+          if (lang !== 'fr') {
             var navLangs = navigator.languages || [navigator.language];
             for (var i = 0; i < navLangs.length; i++) {
-              if (navLangs[i].indexOf('fr') === 0) { lang = 'fr'; break; }
+              var nav = String(navLangs[i] || '').toLowerCase();
+              if (nav.indexOf('fr') === 0) { lang = 'fr'; break; }
             }
           }
-          if (lang) document.documentElement.lang = lang;
+          document.documentElement.lang = lang;
         } catch (_) { /* noop */ }
       })();
     </script>
