--- a/desktop-portfolio/public/404.html
+++ b/desktop-portfolio/public/404.html
@@ -3,28 +3,56 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirecting — Robert Hoffmann</title>
+    <title>404 — Page Not Found</title>
     <meta name="robots" content="noindex, nofollow" />
-    <meta name="description" content="Redirecting to Robert Hoffmann's portfolio." />
-    <link rel="canonical" href="https://i-technology.net/" />
-    <script>
-      // SPA redirect for GitHub Pages
-      // Encodes the current path into a query string so index.html can restore it
-      const segment = 1; // number of path segments to keep (0 for user/org sites)
-      const path = window.location.pathname
-        .split('/')
-        .filter(Boolean)
-        .slice(segment)
-        .join('/');
-      const query = window.location.search;
-      window.location.replace(
-        window.location.origin +
-          '/' +
-          (path ? '?/' + path : '') +
-          (query ? (path ? '&' : '?') + query.slice(1) : '') +
-          window.location.hash
-      );
-    </script>
+    <meta name="description" content="The page you requested could not be found." />
+    <style>
+      :root {
+        color-scheme : dark;
+      }
+
+      body {
+        margin            : 0;
+        min-height        : 100dvh;
+        display           : grid;
+        place-items       : center;
+        background        : linear-gradient(135deg, #1a0a35, #9964ac);
+        color             : #f4f4f5;
+        font-family       : Inter, ui-sans-serif, system-ui, sans-serif;
+        line-height       : 1.5;
+      }
+
+      main {
+        max-width         : 32rem;
+        margin            : 1.5rem;
+        padding           : 1.5rem;
+        border            : 1px solid rgba(255, 255, 255, 0.22);
+        border-radius     : 0.875rem;
+        background        : rgba(18, 18, 28, 0.6);
+        backdrop-filter   : blur(8px);
+        box-shadow        : 0 10px 26px rgba(0, 0, 0, 0.32);
+      }
+
+      h1 {
+        margin            : 0 0 0.5rem;
+        font-size         : 1.5rem;
+      }
+
+      p {
+        margin            : 0 0 1rem;
+        color             : #d4d4d8;
+      }
+
+      a {
+        color             : #a5d8ff;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>404 — Page Not Found</h1>
+      <p>The requested page or asset does not exist on this site.</p>
+      <a href="/">Return to homepage</a>
+    </main>
+  </body>
 </html>
