feat: add mobile app components and functionality
- Introduced MobileAppSurface.vue for handling mobile app window interactions including swipe gestures for closing and minimizing.
- Created MobileDock.vue to manage the mobile app dock, allowing users to select and toggle between open apps.
- Added MobileHeader.vue for the mobile header, featuring locale and theme toggles.
- Implemented MobileHomeGrid.vue to display application shortcuts in a grid format.
- Developed MobileToastStack.vue for managing toast notifications in the mobile interface.
- Added useMobileShell.ts composable to manage mobile app state, window management, and interactions.

--- a/desktop-portfolio/index.html
+++ b/desktop-portfolio/index.html
@@ -82,7 +82,14 @@
     <!-- ── Fonts (self-hosted) ── -->
     <link rel="preload" href="/fonts/inter-latin-var.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/fonts/jetbrains-mono-latin-var.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/wallpaper-lqip.webp" as="image" type="image/webp" fetchpriority="high" />
+    <link
+      rel="preload"
+      href="/wallpaper-lqip.webp"
+      as="image"
+      type="image/webp"
+      fetchpriority="high"
+      media="(min-width: 768px)"
+    />
 
     <script>
       (function () {
