feat: add parallax engine with mobile gyroscope support
- Implemented `useElementImageSizes` composable for responsive image sizing.
- Created `videoPosterSources.ts` for managing video poster image sources.
- Defined parallax types and configurations in `parallax.ts`.
- Added background, middle, and foreground images for parallax layers.
- Drafted PRD for mobile parallax with gyroscope integration.
- Documented performance optimizations and image handling strategies.
- Exported parallax runtime to HTML for testing and demonstration.
- Added sample JSONL configuration for parallax layers and settings.

--- a/desktop-portfolio/index.html
+++ b/desktop-portfolio/index.html
@@ -90,6 +90,15 @@
       fetchpriority="high"
       media="(min-width: 768px)"
     />
+    <link
+      rel="preload"
+      href="/video-poster-960.avif"
+      as="image"
+      type="image/avif"
+      imagesrcset="/video-poster-640.avif 640w, /video-poster-960.avif 960w, /video-poster.avif 1280w"
+      imagesizes="416px"
+      fetchpriority="high"
+    />
 
     <script>
       (function () {
